fix UI-jumps

--- a/src/components/ServicesTabs/panels.module.scss
+++ b/src/components/ServicesTabs/panels.module.scss
@@ -1,3 +1,13 @@
+.wrap {
+  width: 100%;
+  position: relative;
+}
+
+.panel {
+  position: absolute;
+  inset: 0;
+}
+
 .slider {
   position: relative;
   margin: -16px;
@@ -54,9 +64,6 @@
   box-sizing: border-box;
   cursor: pointer;
 
-  width: 100%;
-  height: 100%;
-
   position: relative;
   border: 1px solid transparent;
 
@@ -107,8 +114,6 @@
 .image img {
   object-fit: cover;
   object-position: center;
-  height: 100%;
-  width: 100%;
 }
 
 // .btn-nav {
